[gd_scene load_steps=17 format=3 uid="uid://bxqu51ckbq1cb"]

[ext_resource type="Script" path="res://scripts/world/world.gd" id="1_35jya"]
[ext_resource type="Texture2D" uid="uid://qvlemlsunah3" path="res://assets/earth_texture/ground2.jpg" id="2_bgu66"]
[ext_resource type="PackedScene" uid="uid://b1opow3lv3b7f" path="res://scenes/world/road.tscn" id="4_pparu"]
[ext_resource type="PackedScene" uid="uid://c0dx2mt3ta72i" path="res://scenes/world/pine_fall.tscn" id="5_qbgek"]
[ext_resource type="PackedScene" uid="uid://dgn1t7fl0w82o" path="res://scenes/world/building_house_b.tscn" id="6_6g7fk"]
[ext_resource type="PackedScene" uid="uid://dqimm74soafer" path="res://scenes/world/building_house_a.tscn" id="6_yy6p6"]
[ext_resource type="PackedScene" uid="uid://dp2scibkmmlyl" path="res://scenes/world/building_tower.tscn" id="7_pqw5t"]
[ext_resource type="PackedScene" uid="uid://i0nxfaylr1k3" path="res://scenes/world/fence.tscn" id="8_b0i1q"]
[ext_resource type="PackedScene" uid="uid://cyf17woq3gpsp" path="res://scenes/world/shadow.tscn" id="9_g83yv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bm44r"]
albedo_color = Color(0.74902, 0.592157, 0.486275, 1)
albedo_texture = ExtResource("2_bgu66")
uv1_scale = Vector3(0.3, 0.3, 0.3)
uv1_triplanar = true
uv2_scale = Vector3(2, 2, 2)

[sub_resource type="Gradient" id="Gradient_grr7k"]
offsets = PackedFloat32Array(0.277778, 0.566239, 0.99359, 0.997863, 1)
colors = PackedColorArray(0.0235043, 0.0235043, 0.0235043, 1, 0, 0, 0, 1, 0.799621, 0.799621, 0.799621, 1, 0.962442, 0.962442, 0.962442, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_t4xca"]
noise_type = 4
frequency = 0.0062

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_lgxlf"]
width = 1024
height = 1024
seamless = true
color_ramp = SubResource("Gradient_grr7k")
noise = SubResource("FastNoiseLite_t4xca")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_aapf2"]
sky_top_color = Color(0.6, 0.47451, 0.509804, 1)
sky_horizon_color = Color(0.607843, 0.298039, 0.203922, 1)
sky_cover = SubResource("NoiseTexture2D_lgxlf")
ground_horizon_color = Color(0.368627, 0.188235, 0.0784314, 1)
sun_angle_max = 45.28
sun_curve = 0.62116

[sub_resource type="Sky" id="Sky_skxn4"]
sky_material = SubResource("ProceduralSkyMaterial_aapf2")

[sub_resource type="Environment" id="Environment_5tdxp"]
background_mode = 2
background_energy_multiplier = 1.1
sky = SubResource("Sky_skxn4")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
tonemap_mode = 2

[node name="World" type="Node3D"]
script = ExtResource("1_35jya")

[node name="Stage" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -34)
use_collision = true
size = Vector3(80, 1, 120)
material = SubResource("StandardMaterial3D_bm44r")

[node name="Road" type="Node3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="Road" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.3645, 9.53674e-07, -7.77823)

[node name="Road2" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.3645, 9.53674e-07, -5.77823)

[node name="Road3" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.3645, 9.53674e-07, -3.77823)

[node name="Road4" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.3645, 9.53674e-07, -3.77823)

[node name="Road5" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.3645, 9.53674e-07, -3.77823)

[node name="Road6" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.3645, 9.53674e-07, -3.77823)

[node name="Road7" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.3645, 9.53674e-07, -3.77823)

[node name="Road8" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.3645, 9.53674e-07, -3.77823)

[node name="Road9" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.3645, 9.53674e-07, -3.77823)

[node name="Road10" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.3645, 9.53674e-07, -3.77823)

[node name="Road11" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.3645, 9.53674e-07, -3.77823)

[node name="Road12" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3645, 9.53674e-07, -3.77823)

[node name="Road22" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -5.77823)

[node name="Road23" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -7.77823)

[node name="Road24" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -9.77823)

[node name="Road25" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -11.7782)

[node name="Road26" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -13.7782)

[node name="Road27" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -15.7782)

[node name="Road28" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -17.7782)

[node name="Road29" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -19.7782)

[node name="Road30" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(0.999982, -0.00593408, 0, 0.00593408, 0.999982, 0, 0, 0, 1, -2.3645, 9.53674e-07, -21.7782)

[node name="Road31" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -23.7782)

[node name="Road32" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -25.7782)

[node name="Road33" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -27.7782)

[node name="Road34" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -29.7782)

[node name="Road35" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -31.7782)

[node name="Road36" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3645, 9.53674e-07, -33.7782)

[node name="Road37" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.364496, 9.53674e-07, -33.7782)

[node name="Road38" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.6355, 9.53674e-07, -33.7782)

[node name="Road39" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.6355, 9.53674e-07, -33.7782)

[node name="Road40" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.6355, 9.53674e-07, -33.7782)

[node name="Road13" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.635504, 9.53674e-07, -3.77823)

[node name="Road14" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.6355, 9.53674e-07, -3.77823)

[node name="Road15" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.6355, 9.53674e-07, -3.77823)

[node name="Road16" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.6355, 9.53674e-07, -3.77823)

[node name="Road17" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.6355, 9.53674e-07, -3.77823)

[node name="Road18" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.6355, 9.53674e-07, -3.77823)

[node name="Road19" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.6355, 9.53674e-07, -3.77823)

[node name="Road20" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.6355, 9.53674e-07, -5.77823)

[node name="Road21" parent="Stage/Road" instance=ExtResource("4_pparu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.6355, 9.53674e-07, -7.77823)

[node name="Tree" type="Node3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="PineFall" parent="Stage/Tree" instance=ExtResource("5_qbgek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.1043, 1.90735e-06, -51.1377)

[node name="PineFall2" parent="Stage/Tree" instance=ExtResource("5_qbgek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.1043, 1.90735e-06, -44.1377)

[node name="PineFall3" parent="Stage/Tree" instance=ExtResource("5_qbgek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.1043, 1.90735e-06, -49.1377)

[node name="PineFall4" parent="Stage/Tree" instance=ExtResource("5_qbgek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.1043, 1.90735e-06, -39.1377)

[node name="PineFall5" parent="Stage/Tree" instance=ExtResource("5_qbgek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.104301, 1.90735e-06, -44.1377)

[node name="PineFall6" parent="Stage/Tree" instance=ExtResource("5_qbgek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.69926, 1.90735e-06, -50.1377)

[node name="PineFall7" parent="Stage/Tree" instance=ExtResource("5_qbgek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.1807, 1.90735e-06, -48.2082)

[node name="PineFall8" parent="Stage/Tree" instance=ExtResource("5_qbgek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.8957, 1.90735e-06, -42.1377)

[node name="Building1" parent="Stage" instance=ExtResource("6_6g7fk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 0, -16)

[node name="Building2" parent="Stage" instance=ExtResource("6_6g7fk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -16)

[node name="Building3" parent="Stage" instance=ExtResource("6_yy6p6")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 15.5174, 0, -33.2147)

[node name="Tower" parent="Stage" instance=ExtResource("7_pqw5t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.4563, 0, -33.267)

[node name="Fence" type="Node3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="Fence" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -7.43795)

[node name="Fence27" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -4.43795)

[node name="Fence28" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -1.43795)

[node name="Fence2" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -10.4379)

[node name="Fence3" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -13.4379)

[node name="Fence4" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -16.4379)

[node name="Fence5" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -19.4379)

[node name="Fence6" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -22.4379)

[node name="Fence7" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -25.4379)

[node name="Fence8" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -28.4379)

[node name="Fence9" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -31.4379)

[node name="Fence10" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -34.4379)

[node name="Fence11" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -37.4379)

[node name="Fence12" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -40.4379)

[node name="Fence13" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.1634, 0, -43.4379)

[node name="Fence14" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -7.43795)

[node name="Fence29" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -4.43795)

[node name="Fence30" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -1.43795)

[node name="Fence15" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -10.4379)

[node name="Fence16" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -13.4379)

[node name="Fence17" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -16.4379)

[node name="Fence18" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -19.4379)

[node name="Fence19" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -22.4379)

[node name="Fence20" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -25.4379)

[node name="Fence21" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -28.4379)

[node name="Fence22" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -31.4379)

[node name="Fence23" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -34.4379)

[node name="Fence24" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -37.4379)

[node name="Fence25" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -40.4379)

[node name="Fence26" parent="Stage/Fence" instance=ExtResource("8_b0i1q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -28.8366, 0, -43.4379)

[node name="Shadow" type="Node3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="Shadow" parent="Stage/Shadow" instance=ExtResource("9_g83yv")]
transform = Transform3D(0.99988, 0, 0.0154805, 0, 1, 0, -0.0154805, 0, 0.99988, -0.0137169, -1.90735e-06, -21.0172)

[node name="Shadow2" parent="Stage/Shadow" instance=ExtResource("9_g83yv")]
transform = Transform3D(0.99988, 0, 0.0154805, 0, 1, 0, -0.0154805, 0, 0.99988, -7.01372, -1.90735e-06, -23.0172)

[node name="Shadow3" parent="Stage/Shadow" instance=ExtResource("9_g83yv")]
transform = Transform3D(0.99988, 0, 0.0154805, 0, 1, 0, -0.0154805, 0, 0.99988, 3.98628, -1.90735e-06, -25.0172)

[node name="Shadow4" parent="Stage/Shadow" instance=ExtResource("9_g83yv")]
transform = Transform3D(0.99988, 0, 0.0154805, 0, 1, 0, -0.0154805, 0, 0.99988, -12.0137, -1.90735e-06, -26.0172)

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_5tdxp")

[node name="PlayerContainer" type="Node3D" parent="."]

[node name="ZombieContainer" type="Node3D" parent="."]

[node name="RemainingTimeLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="RoundStartLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "READY"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
